# movie-stats-dashboard

./: README.md  main.py  pyproject.toml
src/: budget_webscraping.py  cleaner_tools.py  cleaning.py  database.py  dataframe_cleaning.py  download_kaggle_data.py  download_kagglesets.py  downloading.py  helpers.py  merging.py  processing.py  sql_tables.py  webscraping.py
src/dash/: dashboard.py  dashboard_testing.py  movie_db.py
src/database/: database.py
src/downloading/: webscraping.py
src/gui/: movizapp.py
src/processing/: cleaner_tools.py  cleaning.py  merging.py
src/utils/: helpers.py  logging.py
