[project]
name = "movie-stats-dashboard"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dash>=3.0.2",
    "kagglehub>=0.3.11",
    "lxml>=5.3.2",
    "pandas>=2.2.3",
    "pyqt5>=5.15.11",
    "requests>=2.32.3",
    "tqdm>=4.67.1",
]
